--- a/style.css
+++ b/style.css
@@ -48,8 +48,8 @@ header {
     height: 70px; width: auto; /* Adjusts logo size */
 }
 .logo-text {
-    font-family: 'Cambria', serif;
-    font-size: 1.0rem;
+    font-family: 'Times New Roman', serif;
+    font-size: 1.3rem;
     color: var(--dark);
     font-weight: 800;
 }
@@ -127,4 +127,5 @@ footer { background: var(--dark); color: white; padding: 60px 5% 20px; margin-to
     .top-bar { flex-direction: column; text-align: center; gap: 10px; }
     .footer-container { grid-template-columns: 1fr; }
 }
+
 
